Add description to crates

--- a/recovery/Cargo.toml
+++ b/recovery/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 license = "MIT"
 homepage = "https://github.com/popen2/recovery-rs"
+description = "Trait and derive macros to declare how errors should be retried"
 
 [dependencies]
 recovery-derive = { path = "../recovery-derive", version = "0.1.0" }
