--- a/recovery/Cargo.toml
+++ b/recovery/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "recovery"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 license = "MIT"
 homepage = "https://github.com/popen2/recovery-rs"
 description = "Trait and derive macros to declare how errors should be retried"
+readme = "../README.md"
 
 [dependencies]
-recovery-derive = { path = "../recovery-derive", version = "0.1.2" }
+recovery-derive = { path = "../recovery-derive", version = "0.1.3" }
